# WHOS-BUYING

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/engine/: __init__.py  matching_engine.py  models.py  order_book.py  simulator.py
backend/src/ws/: __init__.py  manager.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.svelte  main.ts
frontend/src/components/: DepthChart.svelte  PriceHeader.stories.ts  PriceHeader.svelte  StatusBar.stories.ts  StatusBar.svelte  TradeTicker.stories.ts  TradeTicker.svelte
frontend/src/lib/pixi/: renderer.ts
frontend/src/lib/stores/: orderbook.ts
